@startuml
' ==========================
' ER Diagram - Online Library
' ==========================

entity "users" as users {
  * id : int <<PK>>
  --
  * email : varchar <<UNIQUE>>
  * password_hash : varchar
  * role : varchar
}

entity "books" as books {
  * id : int <<PK>>
  --
  * title : varchar
}

entity "authors" as authors {
  * id : int <<PK>>
  --
  * name : varchar
}

entity "genres" as genres {
  * id : int <<PK>>
  --
  * name : varchar <<UNIQUE>>
}

entity "favorites" as favorites {
  * user_id : int <<PK,FK>>
  * book_id : int <<PK,FK>>
}

entity "book_authors" as book_authors {
  * book_id : int <<PK,FK>>
  * author_id : int <<PK,FK>>
}

entity "book_genres" as book_genres {
  * book_id : int <<PK,FK>>
  * genre_id : int <<PK,FK>>
}


' ==========================
' Relationships
' ==========================

users ||--o{ favorites : "has"
books ||--o{ favorites : "liked"

books ||--o{ book_authors : ""
authors ||--o{ book_authors : ""

books ||--o{ book_genres : ""
genres ||--o{ book_genres : ""

@enduml
